--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,7 @@
 		"ghcr.io/devcontainers/features/python:1": {}
 
 	},
+	"postStartCommand": "initialize.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
